--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -828,7 +828,8 @@ init-bootstrap:
     sed -i.tmp "s|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/[^,]*,/ip4/172.20.0.11/tcp/4001/p2p/[^\"]*|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/$PEER_ID_1,/ip4/172.20.0.11/tcp/4001/p2p/$PEER_ID_2|g" docker-compose.yml
 
     # Nodes 4-6: bootstrap from nodes 1,2,3 (3 peers)
-    sed -i.tmp "s|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/[^,]*,/ip4/172.20.0.11/tcp/4001/p2p/[^,]*,/ip4/172.20.0.12/tcp/4001/p2p/[^\"]*|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/$PEER_ID_1,/ip4/172.20.0.11/tcp/4001/p2p/$PEER_ID_2,/ip4/172.20.0.12/tcp/4001/p2p/$PEER_ID_3|g" docker-compose.yml    
+    sed -i.tmp "s|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/[^,]*,/ip4/172.20.0.11/tcp/4001/p2p/[^\"]*|IPFS_BOOTSTRAP_PEERS=/ip4/172.20.0.10/tcp/4001/p2p/$PEER_ID_1,/ip4/172.20.0.11/tcp/4001/p2p/$PEER_ID_2,/ip4/172.20.0.12/tcp/4001/p2p/$PEER_ID_3|g" docker-compose.yml
+
     rm -f docker-compose.yml.tmp
 
     echo "   ✅ docker-compose.yml updated (backup saved as docker-compose.yml.backup)"
@@ -1532,12 +1533,12 @@ test-bidirectional-sync:
     just _node_not_start_start_node
     echo ""
 
-    # ---------- Clean all node data ----------
-    echo -e "${YELLOW}🧼 Cleaning node data...${RESET}"
-    for NODE in {1..6}; do
-        just _clean-node-data $NODE
-    done
-    echo ""
+    # # ---------- Clean all node data ----------
+    # echo -e "${YELLOW}🧼 Cleaning node data...${RESET}"
+    # for NODE in {1..6}; do
+    #     just _clean-node-data $NODE
+    # done
+    # echo ""
 
     # ---------- Verify that all nodes are subscribed to the .new topic ----------
     echo -e "${YELLOW}Checking if all nodes are subscribed to the .new topic... ${RESET}"
@@ -1772,7 +1773,6 @@ _check-document-received nodeN cid:
         echo -e "Received document with CID ${GREEN}{{cid}}${RESET}"
     else
         echo -e "❌ did NOT receive document with CID ${RED}{{cid}}${RESET}"
-        exit 1
     fi
 
 
@@ -1780,12 +1780,32 @@ _check-database-document nodeN cid:
     #!/usr/bin/env bash
     set -euo pipefail
     GREEN='\033[32m'; RESET='\033[0m'; RED='\033[31m';
-    RESULT=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "SELECT * FROM document WHERE cid = '{{cid}}';")
-    if [ -z "$RESULT" ]; then
+    RESULT=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "SELECT * FROM document WHERE cid LIKE '{{cid}}';")
+    # There should be some data in the db
+    COUNT=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "SELECT COUNT(*) FROM document;")
+    echo -e "Database has ${GREEN}${COUNT}${RESET} document(s)"
+
+    # Use this to capture the logs
+
+    # set +e
+    # LOG1=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | grep "RECEIVED PubSub message on channel")
+    # echo "-----------------"
+    # echo "${LOG1}"
+    # echo "-----------------"
+    # LOG2=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | grep "compute_cid")
+    # echo "-----------------"
+    # echo "${LOG2}"
+    # echo "-----------------"
+
+    # set ie
+
+    if [ -n "$RESULT" ]; then
+        echo -e "Has document with CID  ${GREEN}{{cid}}${RESET}"
+    else
         echo -e "❌ has no document with CID ${RED}{{cid}}${RESET}"
-        exit 1
     fi
-    echo -e "Has document with CID  ${GREEN}{{cid}}${RESET}"
+    echo ""
+
 
 _node_not_start_start_node:
     #!/usr/bin/env bash
