--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -61,7 +61,6 @@ dashmap = "6.1.0"
 once_cell = "1.21.3"
 clap = "4.5.46"
 ctrlc = "3.5.0"
-build-info = "0.0.42"
 derive_more = "2.0.1"
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
@@ -103,12 +102,13 @@ keyed-lock = "0.2.3"
 wasmprinter = "0.243.0"
 wat = "1.239.0"
 multihash = { version = "0.19.3", features = ["serde-codec"] }
+const_format = "0.2.35"
 
 # Pinned to the catalyst_types minicbor version.
 minicbor = { version = "=0.25.1", features = ["std", "derive"] }
 
 [build-dependencies]
-build-info-build = "0.0.42"
+built = { version = "0.8.0", features = ["git2", "chrono"] }
 
 [dev-dependencies]
 serial_test = { version = "3.2.0", features = ["file_locks"] }
