fix: connect to DHT providers before Bitswap fetch
  Workaround for rust-ipfs bug where get_block().providers() initiates
  dials but doesn't wait for connection before checking connectivity.

  Changes:
  - Add hermes-ipfs-local with provider pre-connection logic
  - Patch Cargo.toml to use local hermes-ipfs
  - Fix DHT key format (cid.to_bytes() to match dht_provide)

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -59,3 +59,6 @@ unreachable = "deny"
 missing_docs_in_private_items = "deny"
 arithmetic_side_effects = "deny"
 
+# Patch hermes-ipfs to use local version with get_ipfs_file_cbor_with_providers
+[patch."https://github.com/input-output-hk/catalyst-libs.git"]
+hermes-ipfs = { path = "../hermes-ipfs-local" }
