--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -53,7 +53,9 @@ cat-gateway-types = [
     "url",
     "base64",
     "bech32",
+    "cid"
 ]
+doc-sync = ["cat-gateway-types"]
 
 [dependencies]
 wit-bindgen = "0.46.0"
@@ -67,6 +69,7 @@ num-bigint = "0.4.6"
 regex = { version = "1.12.2", optional = true }
 serde = { version = "1.0.228", optional = true }
 chrono = { version = "0.4.42" }
+cid = {version = "0.11.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 ed25519-dalek = { version = "2.2.0", optional = true }
 utoipa = { version = "5.4.0", features = ["uuid", "url"], optional = true }
