--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -31,7 +31,8 @@ path = "tests/integration/tests/mod.rs"
 
 [dependencies]
 # Catalyst Internal Crates
-hermes-ipfs = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "fix/hermes-736/add-file", features = ["doc-sync"] }
+# TODO: Revert to tag after PR #763 merges
+hermes-ipfs = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "fix/bitswap-provider-connection", features = ["doc-sync"] }
 cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
 cardano-chain-follower = { version = "0.0.19", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower/v0.0.19" }
 catalyst-types = { version = "0.0.11", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.11" }
