--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @stevenj @cong-orh @rafal-ch @bkioshn @aido-mth
+* @stevenj @cong-or @rafal-ch @bkioshn @aido-mth
 
 .md @stevenj @rafal-ch @minikin
