--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -59,5 +59,6 @@ unreachable = "deny"
 missing_docs_in_private_items = "deny"
 arithmetic_side_effects = "deny"
 
-[patch."https://github.com/input-output-hk/catalyst-libs.git"]
-hermes-ipfs = { path = "../../catalyst-libs/rust/hermes-ipfs" }
+# Uncomment to use the local version of 'catalyst-libs'
+# [patch."https://github.com/input-output-hk/catalyst-libs.git"]
+# hermes-ipfs = { path = "../../catalyst-libs/rust/hermes-ipfs" }
