--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -56,6 +56,11 @@
 #   - Just (https://just.systems)
 #   - Rust toolchain (builds use cargo directly, bypassing Earthly)
 #
+# TEST:
+#   just test-pubsub-propagation         # Test message propagation
+#   just test-bidirectional-sync         # Test bidirectional sync
+#   just test-late-join-sync             # Test node late join with keepalive sync
+#
 # ==============================================================================
 
 # Show available commands (default)
@@ -1286,7 +1291,9 @@ _test-pubsub-visualize:
         for OTHER in {1..6}; do
             [ $NODE -ne $OTHER ] && OTHERS+=("Node $OTHER")
         done
-        echo "${OTHERS[*]}" | sed 's/ /, /g'
+        # Use printf to join with ", " separator
+        printf "%s, " "${OTHERS[@]:0:${#OTHERS[@]}-1}"
+        echo "${OTHERS[-1]}"
     done
     echo ""
     echo -e "  ${BLUE}ℹ️  Each node maintains 5 peer connections (5 peers × 6 nodes = 30 total)${RESET}"
@@ -1419,9 +1426,11 @@ help:
     @echo "  Developer Testing:"
     @echo "    just validate-prereqs        # Check prerequisites"
     @echo "    just start                   # Interactive mode, prompts to rebuild"
-    @echo "    just test-pubsub-propagation # Test message propagation"
     @echo "    just logs-node 1             # Debug specific node"
     @echo "    just restart                 # Apply code changes"
+    @echo "    just test-pubsub-propagation # Test message propagation"
+    @echo "    just test-bidirectional-sync         # Test bidirectional sync"
+    @echo "    just test-late-join-sync             # Test node late join with keepalive sync"
     @echo ""
     @echo "  CI/CD Pipeline:"
     @echo "    just start-ci         # CI mode: non-interactive, always rebuilds"
@@ -1499,3 +1508,352 @@ help:
     @echo ""
     @echo "For more info: cat justfile or just --list"
     @echo "================================================================================"
+
+# Test: Test basic pub/sub propagation and bidirectional sync
+#
+# Prerequisites:
+#  - All nodes are started
+# 
+# 1. If nodes not started, start them
+# 2. Cleaning all node data (database + SMT)
+# 3. Verify that all nodes subscribed to .new topic
+# 4. Post a document to Node1 via HTTP Post
+# 5. Extract the CID from the response
+# 6. Check if other nodes received the message
+# 7. Check database for all nodes where CID is equal to CID extracted from response
+#
+# Test basic pub/sub propagation and bidirectional sync
+test-bidirectional-sync:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    YELLOW='\033[33m';BLUE='\033[34m'; BOLD='\033[1m'; RESET='\033[0m'
+
+    # ---------- Test: Basic Pub/Sub Propagation and Bidirectional Sync ----------
+    echo ""
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+    echo -e "${BOLD}${BLUE}Test: Basic Pub/Sub Propagation and Bidirectional Sync${RESET}"
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+    echo ""
+
+    # ---------- If nodes not started, start them ----------
+    just _node_not_start_start_node
+    echo ""
+
+    # # ---------- Clean all node data ----------
+    # echo -e "${YELLOW}🧼 Cleaning node data...${RESET}"
+    # for NODE in {1..6}; do
+    #     just _clean-node-data $NODE
+    # done
+    # echo ""
+
+    # ---------- Verify that all nodes are subscribed to the .new topic ----------
+    echo -e "${YELLOW}Checking if all nodes are subscribed to the .new topic... ${RESET}"
+    for NODE in {1..6}; do
+        just _node-subscribe $NODE ".new"
+    done
+    echo "✅ All nodes are subscribed to .new topic"
+    echo ""
+
+    CID_LIST=()
+    # ---------- Post document and get the CID ----------
+    echo -e "${YELLOW}Posting document to Node1...${RESET}"
+    TIMESTAMP=$(date +%s)
+    # TODO - replace this with real document
+    DOC="Test Document sync - Timestamp: $TIMESTAMP"
+    CID=$(just _post-document "$DOC" "5000")
+    CID_LIST+=($CID)
+
+    echo ""
+    echo "🥐 List of CIDs: $(printf '%s\n' "${CID_LIST[@]}" | jq -R . | jq -s .)"
+    echo ""
+
+    # ---------- Check whether other nodes received the message ----------
+    echo -e "${YELLOW}Checking if nodes 2-6 received message...${RESET}"
+    for NODE in {2..6}; do
+        echo "🍎 Node $NODE"
+        for C in ${CID_LIST[@]}; do
+            just _check-document-received $NODE $C
+        done
+    done
+    echo "✅ All nodes (2-6) received the messages!"
+    echo ""
+
+    # ---------- Check database for all nodes ----------
+    echo -e "${YELLOW}Checking database for all nodes...${RESET}"
+    for NODE in {1..6}; do
+        echo "🍊 Node $NODE"
+        for C in ${CID_LIST[@]}; do
+            just _check-database-document $NODE $C
+        done
+    done
+    echo "✅ All nodes contains documents"
+
+    echo ""
+    echo -e "${BOLD}${BLUE}Test completed! 🎉${RESET}"
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+# Test: Late joining node with keepalive sync
+#
+# Prerequisites:
+#  - All nodes are started
+#
+# 1. If nodes not started, start them
+# 2. Cleaning all node data (database + SMT)
+# 3. Stop a node (node 6)
+# 4. Post a document to Node1 via HTTP Post
+# 5. Extract the CID from the response
+# 6. Check if other nodes received the message
+# 7. Check database for all nodes where CID is equal to CID extracted from response
+# 8. Start node 6
+# 9. Check database for node6 where CID is equal to CID extracted from response
+#
+# Test late joining node with keepalive sync
+test-late-join-sync:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    GREEN='\033[32m'; RED='\033[31m'; YELLOW='\033[33m'
+    BLUE='\033[34m'; BOLD='\033[1m'; RESET='\033[0m'
+
+    # ---------- Test: Late joining node with keepalive sync ----------
+    echo ""
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+    echo -e "${BOLD}${BLUE}Test: Late Joining Node with Keepalive Sync${RESET}"
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+    echo ""
+
+    # ---------- If nodes not started, start them ----------
+    just _node_not_start_start_node
+    echo ""
+
+    # ---------- Wait until Athena is initialized ----------
+    echo -e "${YELLOW}🧼 Waiting for Athena to initialize...${RESET}"
+    for NODE in {1..6}; do
+        just _wait-for-athena-ready 1
+    done
+    echo ""
+
+    # ---------- Clean all node data ----------
+    echo -e "${YELLOW}🧼 Cleaning node data...${RESET}"
+    for NODE in {1..6}; do
+        just _clean-node-data $NODE
+    done
+    echo ""
+
+    # ---------- Stop a node (node 6) ----------
+    echo -e "${YELLOW}Stopping node 6...${RESET}"
+    docker compose stop hermes-node6
+    echo "✅ Successfully stopped node 6"
+    echo ""
+
+    CID_LIST=()
+    # ---------- Post documents and get the CID ----------
+    echo -e "${YELLOW}Posting document to Node1...${RESET}"
+    TIMESTAMP=$(date +%s)
+    # TODO - replace this with real document
+    DOC="Test Document 1 - Timestamp: $TIMESTAMP"
+    CID=$(just _post-document "$DOC" "5000")
+    CID_LIST+=($CID)
+    echo ""
+
+    echo -e "${YELLOW}Posting document to Node1...${RESET}"
+    TIMESTAMP=$(date +%s)
+    # TODO - replace this with real document
+    DOC="Test Document 1.1 - Timestamp: $TIMESTAMP"
+    CID=$(just _post-document "$DOC" "5000")
+    CID_LIST+=($CID)
+    echo ""
+
+    echo -e "${YELLOW}Posting document to Node1...${RESET}"
+    TIMESTAMP=$(date +%s)
+    # TODO - replace this with real document
+    DOC="Test Document 2 - Timestamp: $TIMESTAMP"
+    CID=$(just _post-document "$DOC" "5000")
+    CID_LIST+=($CID)
+    echo ""
+
+    echo -e "${YELLOW}Posting document to Node1...${RESET}"
+    TIMESTAMP=$(date +%s)
+    # TODO - replace this with real document
+    DOC="Test Document 3 - Timestamp: $TIMESTAMP"
+    CID=$(just _post-document "$DOC" "5000")
+    CID_LIST+=($CID)
+    echo ""
+
+    echo ""
+    echo "🥐 List of CIDs: $(printf '%s\n' "${CID_LIST[@]}" | jq -R . | jq -s .)"
+    echo ""
+
+    # ---------- Check whether other nodes received the message (omit node 6) ----------
+    echo -e "${YELLOW}Checking if nodes 2-5 received message...${RESET}"
+    for NODE in {2..5}; do
+        echo "🍎 Node $NODE"
+        for C in ${CID_LIST[@]}; do
+            # just _check-document-received $NODE $C
+            echo "Assuming received"
+        done
+    done
+    echo "✅ All nodes (2-5) received the message!"
+    echo ""
+
+    # ---------- Check database for all nodes (omit node 6) ----------
+    echo -e "${YELLOW}Checking database for all nodes...${RESET}"
+    for NODE in {1..5}; do
+        echo "🍊 Node $NODE"
+        for C in ${CID_LIST[@]}; do
+            just _check-database-document $NODE $C
+        done
+    done
+    echo "✅ All nodes contains documents"
+    echo ""
+
+    # ---------- Start node 6 ----------
+    echo -e "${YELLOW}Starting node 6...${RESET}"
+    docker compose start hermes-node6
+    echo "✅ Successfully started node 6"
+    echo ""
+
+    # ---------- Wait for some time to let the keepalive sync to happen ----------
+    # Keepalive timer is in range of 20-60 seconds
+    echo -e "${YELLOW}Waiting for keepalive sync to happen...${RESET}"
+    sleep 70
+    echo "⌛️ Timeout done"
+    echo ""
+
+    # ---------- Check node 6 sync ----------
+    # Node 6 should have received the document that other node have
+    echo -e "${YELLOW}Checking database, to see if node 6 sync with other nodes...${RESET}"
+    for C in ${CID_LIST[@]}; do
+        just _check-database-document 6 $C
+    done
+    echo "✅ Node 6 has document with CID ${CID_LIST[@]}"
+
+    echo ""
+    echo -e "${BOLD}${BLUE}Test completed! 🎉${RESET}"
+    echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+# -------------------- Helper function -------------------------
+
+_wait-for-athena-ready nodeN timeout="60":
+    #!/usr/bin/env bash
+    set -euo pipefail
+    echo "⏳ Waiting for Athena on node {{nodeN}} to be ready (timeout: {{timeout}}s)..."
+    
+    elapsed=0
+    interval=2
+    
+    while [ $elapsed -lt {{timeout}} ]; do
+        # Check if the document table exists
+        table_exists=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena \
+            "SELECT name FROM sqlite_master WHERE type='table' AND name='document';" 2>/dev/null || echo "")
+        
+        if [ -n "$table_exists" ]; then
+            echo "✅ Athena on node  {{nodeN}} is ready (tables initialized)"
+            exit 0
+        fi
+        
+        sleep $interval
+        elapsed=$((elapsed + interval))
+        echo "   Still waiting... (${elapsed}s elapsed)"
+    done
+    
+    echo "❌ Timeout waiting for athena on node {{nodeN}} to be ready"
+    exit 1
+    
+# Clean node data
+# - Delete all data from the document table
+# TODO - Clean the SMT
+_clean-node-data nodeN:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    echo "Removing data from table document..."
+    docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "DELETE FROM document;" || {
+        echo "❌ Failed to remove data from table document"
+        exit 1
+    }
+    echo "🧹Node {{nodeN}} data cleaned!"
+
+
+_node-subscribe nodeN topic:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    GREP_RESULT=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | grep "Subscribed to {{topic}} with base" | wc -l)
+    if [ "$GREP_RESULT" -lt 1 ]; then
+        echo "❌ Node {{nodeN}} did NOT subscribe to topic {{topic}}"
+        exit 1
+    fi
+    echo "Node {{nodeN}} subscribed to topic {{topic}}"
+
+_post-document doc port:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    DOCUMENT="{{doc}}"
+    RESPONSE=$(curl -s -X POST "http://localhost:{{port}}/api/doc-sync/post" \
+        -H "Host: athena.hermes.local" \
+        -H "Content-Type: text/plain" \
+        -d "$DOCUMENT" 2>&1)
+    CID=$(echo "$RESPONSE" | jq -r '.cid' 2>/dev/null || echo "unknown")
+    SUCCESS=$(echo "$RESPONSE" | jq -r '.success' 2>/dev/null || echo "false")
+    if [ "$SUCCESS" != "true" ]; then
+        echo "❌ Failed to post document" >&2
+        exit 1
+    fi
+    echo "✅ Document posted successfully" >&2
+    echo "Response: $(echo "$RESPONSE" | jq -r '.')" >&2
+    echo "$CID"
+
+_check-document-received nodeN cid:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    GREEN='\033[32m'; RESET='\033[0m'; RED='\033[31m';
+    GREP_RESULT=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | \
+        grep "RECEIVED PubSub message with CIDs: \[" | \
+        grep -v '\[\]' | \
+        grep "{{cid}}" | \
+        wc -l)
+    if [ "$GREP_RESULT" -ge 1 ]; then
+        echo -e "Received document with CID ${GREEN}{{cid}}${RESET}"
+    else
+        echo -e "❌ did NOT receive document with CID ${RED}{{cid}}${RESET}"
+    fi
+
+
+_check-database-document nodeN cid:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    GREEN='\033[32m'; RESET='\033[0m'; RED='\033[31m';
+    RESULT=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "SELECT * FROM document WHERE cid LIKE '{{cid}}';")
+    # There should be some data in the db
+    COUNT=$(docker exec hermes-node{{nodeN}} sqlite3 /data/hermes_datastore.db.athena "SELECT COUNT(*) FROM document;")
+    echo -e "Database has ${GREEN}${COUNT}${RESET} document(s)"
+
+    # Use this to capture the logs
+
+    # set +e
+    # LOG1=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | grep "RECEIVED PubSub message on channel")
+    # echo "-----------------"
+    # echo "${LOG1}"
+    # echo "-----------------"
+    # LOG2=$(docker compose logs "hermes-node{{nodeN}}" 2>&1 | grep "compute_cid")
+    # echo "-----------------"
+    # echo "${LOG2}"
+    # echo "-----------------"
+
+    # set ie
+
+    if [ -n "$RESULT" ]; then
+        echo -e "Has document with CID  ${GREEN}{{cid}}${RESET}"
+    else
+        echo -e "❌ has no document with CID ${RED}{{cid}}${RESET}"
+    fi
+    echo ""
+
+
+_node_not_start_start_node:
+    #!/usr/bin/env bash
+    set -euo pipefail
+    for NODE in {1..6}; do
+        if ! docker compose ps | grep -q "hermes-node$NODE"; then
+            echo "🌈 Node $NODE is not running, starting it..."
+            docker compose start hermes-node$NODE
+        fi
+    done
